배포 전 커밋